version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/CommandSnippet.rst.txt
.. vale off



:class:`CommandSnippet`
=======================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.CommandSnippet

   Bases: :py:obj:`object`


   
   Defines a CommandSnippet.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandSnippet

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~AppendText`
            - Append Text.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~ExportTextFile`
            - Export to Textfile.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~ImportTextFile`
            - Import from Textfile.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~RenameBasedOnDefinition`
            - Run the RenameBasedOnDefinition action.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~FileName`
            - Gets the FileName.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~Input`
            - Gets or sets the Text.
          * - :py:attr:`~InputArgument1`
            - Gets or sets the InputArgument1.
          * - :py:attr:`~InputArgument2`
            - Gets or sets the InputArgument2.
          * - :py:attr:`~InputArgument3`
            - Gets or sets the InputArgument3.
          * - :py:attr:`~InputArgument4`
            - Gets or sets the InputArgument4.
          * - :py:attr:`~InputArgument5`
            - Gets or sets the InputArgument5.
          * - :py:attr:`~InputArgument6`
            - Gets or sets the InputArgument6.
          * - :py:attr:`~InputArgument7`
            - Gets or sets the InputArgument7.
          * - :py:attr:`~InputArgument8`
            - Gets or sets the InputArgument8.
          * - :py:attr:`~InputArgument9`
            - Gets or sets the InputArgument9.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~InvalidateSolution`
            - Gets or sets the InvalidateSolution.
          * - :py:attr:`~IssueSolveCommand`
            - Gets or sets the IssueSolveCommand.
          * - :py:attr:`~OutputParameters`
            - Gets a list of the command snippet's output parameters.
          * - :py:attr:`~OutputSearchPrefix`
            - Gets or sets the OutputSearchPrefix.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ReadOnly`
            - Gets or sets the ReadOnly.
          * - :py:attr:`~SnippetFileStatus`
            - Gets the SnippetFileStatus.
          * - :py:attr:`~SolverTarget`
            - Gets the SolverTarget.
          * - :py:attr:`~StepNumber`
            - Gets or sets the StepNumber.
          * - :py:attr:`~StepSelectionMode`
            - Gets or sets the StepSelectionMode.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.







Property detail
---------------
.. py:property:: Children
   :type: Optional[list[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]

   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]

   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]

   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]

   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: FileName
   :type: Optional[str]

   
   Gets the FileName.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]

   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: Input
   :type: Optional[str]

   
   Gets or sets the Text.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputArgument1
   :type: Optional[str]

   
   Gets or sets the InputArgument1.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputArgument2
   :type: Optional[str]

   
   Gets or sets the InputArgument2.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputArgument3
   :type: Optional[str]

   
   Gets or sets the InputArgument3.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputArgument4
   :type: Optional[str]

   
   Gets or sets the InputArgument4.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputArgument5
   :type: Optional[str]

   
   Gets or sets the InputArgument5.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputArgument6
   :type: Optional[str]

   
   Gets or sets the InputArgument6.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputArgument7
   :type: Optional[str]

   
   Gets or sets the InputArgument7.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputArgument8
   :type: Optional[str]

   
   Gets or sets the InputArgument8.
















   ..
       !! processed by numpydoc !!

.. py:property:: InputArgument9
   :type: Optional[str]

   
   Gets or sets the InputArgument9.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSCommandEditorAuto]

   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: InvalidateSolution
   :type: Optional[bool]

   
   Gets or sets the InvalidateSolution.
















   ..
       !! processed by numpydoc !!

.. py:property:: IssueSolveCommand
   :type: Optional[bool]

   
   Gets or sets the IssueSolveCommand.
















   ..
       !! processed by numpydoc !!

.. py:property:: OutputParameters
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.CommandOutputParameter]]

   
   Gets a list of the command snippet's output parameters.
















   ..
       !! processed by numpydoc !!

.. py:property:: OutputSearchPrefix
   :type: Optional[str]

   
   Gets or sets the OutputSearchPrefix.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReadOnly
   :type: Optional[bool]

   
   Gets or sets the ReadOnly.
















   ..
       !! processed by numpydoc !!

.. py:property:: SnippetFileStatus
   :type: Optional[int]

   
   Gets the SnippetFileStatus.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolverTarget
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CommandEditorTarget]

   
   Gets the SolverTarget.
















   ..
       !! processed by numpydoc !!

.. py:property:: StepNumber
   :type: Optional[int]

   
   Gets or sets the StepNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: StepSelectionMode
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SequenceSelectionType]

   
   Gets or sets the StepSelectionMode.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]

   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: AppendText(NewText: str) -> None

   
   Append Text.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: ExportTextFile(TextFile: str) -> None

   
   Export to Textfile.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: list[ChildrenType]) -> list[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: ImportTextFile(TextFile: str) -> None

   
   Import from Textfile.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: RenameBasedOnDefinition() -> None

   
   Run the RenameBasedOnDefinition action.

   ..
       !! processed by numpydoc !!



.. vale on